css/styling.css
/*!
 * Start Bootstrap - Stylish Portfolio Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

/* Global Styles */

html,
body {
    width: 100%;
    height: 100%;
}

.bigger-text {
    font-size: 24px;
}


.bg-primary {
  color: #CCC;
  background-color: #103D50;
}

.bg-secondary {
    background-color: #467386;
    color: #CCC;
}

.center {
    position: relative;
    margin-left: auto;
    margin-right: auto;
}

body {
    font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    color: #FFF;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
}

.people {
  margin-bottom: 20px;
  text-align: center;

}

.top-padding {
    padding-top:5vh;
}



/* Custom Button Styles */
.btn {
    border-radius: 0;
}
.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: rgba(0,0,0,0.4);
}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: rgba(0,0,0,0.7);
}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: rgb(255,255,255);
}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: rgba(255,255,255,0.8);
}

/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}

/* Navbar */

.navbar-fixed-top {
    padding: 6px 0;
    box-shadow: 0px 2px 10px #555;

}

.navbar-collapse {
    border: none;
    padding-right: 5%;
}

.navbar-fixed-top .navbar-brand {
    font-size: 2em;
}

.navbar-fixed-top .navbar-shrink {
    padding: 10px 0;

}

.navbar-fixed-top.navbar-shrink {
    padding: 10px 0;
}

.navbar {
    font-size: 1.3em;
    font-weight: 500;
    background-color: rgba(255, 255, 255, 0.7);
    border-bottom: 0px;
}

.navbar-brand {
    width: 100%;
    margin-right:10px;
}

.nav-links {
    margin-left: -30px;
}

#navbrand {
    height:125%;
    width: auto;
}
.navbar-fixed-top.navbar-shrink .navbar-brand {
    font-size: 1.5em;
    width: 100%;
}

.nav-links a {
    margin-right: -12px;
    text-align: right;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-toggle {
    border:none;
    background-color: transparent;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: transparent;
}

/* Header */

.header {
    position: relative;
    width: 100%;
    height: 100%;
    
}

.header-img {
    position: absolute;
    width: 30%;
    bottom:10px;
    left:10px;
}

/* Blurb */
.blurb {
    padding: 50px 0;
}
/* About */

.about {
    padding: 50px 0;

}

.about-img {
    width: 100%;
    box-shadow: 2px 2px 10px #333;
}

/* Services */

.services {
    padding: 50px 0;
}

.service-item {
    margin-bottom: 30px;
}

/* Callout */

.callout {
    display: table;
    margin-top: 50px;
    width: 100%;
    height: 400px;
    color: #fff;
    background: url(../img/fullteam.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}

/* Portfolio */

.portfolio {
    padding: 50px 0;
}

.portfolio-item {
    margin-bottom: 30px;
    box-shadow: 2px 2px 10px #333;
}

.img-portfolio {
    margin: 0 auto;
}

.img-portfolio:hover {
    opacity: 0.8;
}



/* Call to Action */

.call-to-action {
    padding: 50px 0;
}

.call-to-action .btn {
    margin: 10px;
}

/* Map */

.map {
    height: 500px;
}

@media(max-width:768px) {
    .map {
        height: 75%;
    }
}

/* Contact */
.floating-label-form-group {
    position: relative;
    margin-bottom: 4vm;
    padding-bottom: 0.5em;
    background-color: #DDD;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: .85em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    -webkit-transition: top .3s ease,opacity .3s ease;
    -moz-transition: top .3s ease,opacity .3s ease;
    -ms-transition: top .3s ease,opacity .3s ease;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #18bc9c;
}
.contact {
    padding: 50px 0;
}

/* Footer */

footer {
    padding: 100px 0;
}

